Layed out some base components

--- a/main.html
+++ b/main.html
@@ -8,14 +8,15 @@
     <title>legure</title>
 </head>
 <body>
-    <header>
-        Sticky Notes
-    </header>
+    <div class="header">
+        <p>Sticky Notes</p> 
+    </div>
     <main>
         <div class="thing">
 
         </div>
     </main>
+    <div class="addButton">+</div>
     <footer>
         Initial Amount
     </footer>
