--- a/main.html
+++ b/main.html
@@ -13,8 +13,14 @@
     </div>
     <main>
         <div class="thing">
-
+            stuff
         </div>
+        <div class="thing">more stuff</div>
+        <div class="thing">more stuff</div>
+        <div class="thing">more stuff</div>
+        <div class="thing">more stuff</div>
+        <div class="thing">more stuff</div>
+        <div class="thing">more stuff</div>
     </main>
     <div class="addButton">+</div>
     <footer>
