list items now size according to whats in them

--- a/main.html
+++ b/main.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Asap:ital@1&display=swap"
+      rel="stylesheet"
+    />
+
     <title>legure</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="header">
-        <p>Sticky Notes</p> 
+      <p>Sticky Notes</p>
     </div>
     <main>
-        <div class="thing">
-            stuff
-        </div>
-        <div class="thing">more stuff</div>
-        <div class="thing">more stuff</div>
-        <div class="thing">more stuff</div>
-        <div class="thing">more stuff</div>
-        <div class="thing">more stuff</div>
-        <div class="thing">more stuff</div>
+      <div class="thing">stuff</div>
+      <div class="thing">more stuff</div>
+      <div class="thing">
+          hmmmmmmmmm <br>
+          hmmmmmmmmm
+      </div>
     </main>
     <div class="addButton">+</div>
-    <footer>
-        Initial Amount
-    </footer>
-</body>
+    <footer>Initial Amount</footer>
+  </body>
 </html>
