Fixed word wrap issue

--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
       <div class="thing">more stuff</div>
       <div class="thing">
         hmmmmmmmmm <br />
-        hmmmmmmmmm
+        hmmmmmmmmm <br />
+        hmmmmmmmmm <br />
+        hmmmmmmmmm <br />
+        hmmmmmmmmm 
+      </div>
+      <div class="thing">
+        hmmmmmmmmmnmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmm
       </div>
     </main>
     <div class="addButton" onclick="itemManager.addItem()" id="addButton">+</div>
