started work on item input

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
       <div class="themeChanger" onclick="themeManager.switchTheme()" id="themeButton">
       </div>
     </header>
+    <div class="valueInput">
+      <input type="text" id="itemName" >
+    </div>
     <main id="holder">
       <div class="thing">stuff</div>
       <div class="thing">more stuff</div>
