Added a function to toggle valueInputDiv

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="themeChanger" onclick="themeManager.switchTheme()" id="themeButton">
       </div>
     </header>
-    <div class="valueInput">
+    <div class="valueInput" id="valueInput">
       <input type="text" id="itemName" >
     </div>
     <main id="holder">
