placeholder text change

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <header id="header">
-            <p>Sticky Notes</p>
+            <p>LEGER</p>
             <div
                 class="themeChanger"
                 onclick="themeManager.switchTheme()"
@@ -39,7 +39,7 @@
         <div class="addButton" onclick="itemManager.popOut()" id="addButton">
             +
         </div>
-        <footer id="footer">Initial Amount</footer>
+        <footer id="footer">Footer thing</footer>
         <script src="js/main.js"></script>
     </body>
 </html>
