--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
     </head>
     <body>
         <div class="container">
-        <div class="valueInput" id="valueInput">
-            <div class="itemInfo">
-                <input type="text" id="itemName" placeholder="item" />
-                <div class="itemCostDiv">
-                    <div id="currency">₹</div>
-                    <input type="number" id="itemCost" placeholder="cost" />
+            <div class="valueInput" id="valueInput">
+                <div class="itemInfo">
+                    <input type="text" id="itemName" placeholder="item" />
+                    <div class="itemCostDiv">
+                        <div id="currency">₹</div>
+                        <input type="number" id="itemCost" placeholder="cost" />
+                    </div>
+                </div>
+                <div class="valueInputButtons">
+                    <div id="saveButton">Save</div>
+                    <div id="deleteButton">Delete</div>
                 </div>
             </div>
-            <div class="valueInputButtons">
-                <div id="saveButton">Save</div>
-                <div id="deleteButton">Delete</div>
-            </div>
-        </div>
         </div>
         <main>
             <header id="header">
@@ -38,23 +38,20 @@
                 ></div>
             </header>
             <div id="holder">
-                <!-- <div class="thing">test <br><br>₹ 1000</div>
-                <div class="thing">test <br><br>₹ 1000</div>
-                <div class="thing">test <br><br>₹ 1000</div>
-                <div class="thing">test <br><br>₹ 1000</div>
-                <div class="thing">test <br><br>₹ 1000</div>
-                <div class="thing">test <br><br>₹ 1000</div> -->
+                <div id="initialAmount"></div>
             </div>
             <div
-            class="addButton"
-            onclick="itemManager.popOut()"
-            id="addButton"
+                class="addButton"
+                onclick="itemManager.popOut()"
+                id="addButton"
             >
-            +
-        </div>
-        <footer id="footer">Footer thing</footer>
-    </main>
+                +
+            </div>
+            <footer id="footer">Footer thing</footer>
+        </main>
         <script src="js/main.js"></script>
-        <script>themeManager.switchTheme()</script>
+        <script>
+            themeManager.switchTheme();
+        </script>
     </body>
 </html>
