Added basic funtionality

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             >
                 +
             </div>
-            <footer id="footer">remaining balance &nbsp;<p></p></footer>
+            <footer id="footer">remaining balance &nbsp;<p id="currentBalance"></p></footer>
         </main>
         <script src="js/main.js"></script>
         <script>
