Somewhat finished localstorage funtionality

--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+
+
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
@@ -9,7 +11,7 @@
             href="https://fonts.googleapis.com/css2?family=Asap:ital@1&display=swap"
             rel="stylesheet"
         />
-
+        <!-- <script src="js/test.js"></script> -->
         <title>legure</title>
     </head>
     <body>
