--- a/index.html
+++ b/index.html
@@ -56,5 +56,6 @@
             <footer id="footer">remaining balance &nbsp;<p id="currentBalance"></p></footer>
         </main>
         <script src="js/main.js"></script>
+
+        <script src="js/theme.js"></script>
     </body>
-</html>
