Did some modifications for rewrite

--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
             </div>
             <footer id="footer">remaining balance &nbsp;<p id="currentBalance"></p></footer>
         </main>
-        <script src="js/main.js"></script>
+        <script src="js/main.js"></script>  <!-- To be repelaced and deleted -->
 
         <script src="js/theme.js"></script>
+        <script src="js/thingObject.js"></script>
+        <script src="js/inputDialog.js"></script>
+        <script src="js/thingList.js"></script>
     </body>
